Added images & 2 more webpages.

--- a/STUDYspace website/blog5.html
+++ b/STUDYspace website/blog5.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>11/07/2022 Blog post</title>
+  <title>19/08/2022 Blog post</title>
 </head>
 <body>
   <header class = "header">
@@ -36,21 +36,16 @@
   </header>
 
   <section class = "textblock">
-    <h2><span class = "outspan">11 July 2022 </span>- STUDYspace Browser Extension first look!</h2>
+    <h2><span class = "outspan">19 August 2022 </span>- Changes to Pomodoro mode!</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
     <div class = "image">
-      <img src="images/google.jpg" alt="">
+      <img src="images/studyses.jpg" alt="" id = "studychoice">
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
     <div class = "image">
-      <img src="images/google2.jpg" alt="Page selection on STUDYspace's browser extension.">
+      <img src="images/break.jpg" alt="Page selection on STUDYspace's browser extension." id = "breakchoice">
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
-    <div class = "image">
-      <img src="images/google3.jpg" alt="The study session timer selection for Pomodoro mode">
-    </div>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa sunt voluptate explicabo pariatur rem nemo, molestias ut eum ab adipisci commodi ad autem quae consectetur numquam, tempora laudantium odio similique.30</p>
 
   </section>
 
@@ -111,6 +106,8 @@
         <span class = "credit"><span class ="inspan">STUDY</span>space inc. | &copy; 2022 All rights reserved</span>
     </div>
   </footer>
+
+
 
 </body>
 </html>
