--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -48,13 +48,13 @@
     <div class = "boxes" id = "chrome">
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading the extension.</span></h4>
-        <img src="" alt="Download our extension by clicking the 'Browser Extension' option.">
+        <img src="images/extensionstep1.jpg" alt="Download our extension by clicking the 'Browser Extension' option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Setting up the extension.</span></h4>
-        <img src="" alt="Enable the extension on Google Chrome Extensions.">
+        <img src="images/browser.jpg" alt="Enable the extension on Google Chrome Extensions.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
     </div>
@@ -65,25 +65,25 @@
     <div class = "boxes" id = "app">
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading our app.</span></h4>
-        <img src="" alt="Download our extension by clicking the 'App' option.">
+        <img src="images/googleplay.jpg" alt="Download our extension by clicking the 'App' option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Choosing an account or guest.</span></h4>
-        <img src="" alt="Open the app and choose either 'account' or 'guest'.">
+        <img src="images/studyspaceapp.jpg" alt="Open the app and choose either 'account' or 'guest'.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three I:</span> Setting up your STUDYspace account.</span></h4>
-        <img src="" alt="Check your email address for a code if you chose the account option.">
+        <img src="images/studyspaceemail.jpg" alt="Check your email address for a code if you chose the account option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three II:</span> Continuing your STUDYspace setup as a guest.</span></h4>
-        <img src="" alt="Proceed onwards to choosing the mode you want to use!">
+        <img src="images/guest.jpg" alt="Proceed onwards to choosing the mode you want to use!">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
     </div>
@@ -95,23 +95,24 @@
     <div class = "boxes">
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Manual mode</span></span></h4>
-          <img src="" alt="Manually enable and disable website block.">
+          <img src="images/page.jpg" alt="Manually enable and disable website block.">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
 
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Pomodoro mode</span></span></h4>
-          <img src="" alt="Choose a time of up to 25 minutes and block the websites of your choice!">
+          <img src="images/studyses.jpg" alt="Choose a time of up to 25 minutes and block the websites of your choice!">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
 
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Exam mode</span></span></h4>
-          <img src="" alt="Choose a time of up to 3 hours to block all urls.">
+          <img src="images/exam.jpg" alt="Choose a time of up to 3 hours to block all urls.">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
     </div>
   </section>
+
 
   <footer>
     <div class = "main-content">
