--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -47,6 +47,18 @@
       </div>
 
       <div class = "newsbox">
+        <a href="blog5.html"><span class = "inspan">19/08/2022:</span></a>
+        <h4>Changes to Pomodoro mode</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+      </div>
+
+      <div class = "newsbox">
+        <a href="blog4.html"><span class = "inspan">15/08/2022:</span></a>
+        <h4>New Mode announcement!</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+      </div>
+
+      <div class = "newsbox">
         <a href="blog2.html"><span class = "inspan">11/07/2022:</span></a>
         <h4>STUDYspace Browser Extension first look.</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
