Replaced Dummy text.

--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -37,7 +37,15 @@
 
     <section class = "textblock">
       <h2>About Us</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus sint reprehenderit voluptatum dolorem, amet perspiciatis ipsa consectetur voluptatibus id et corrupti hic natus maiores eos. A dolorum iste, nihil eius quis officia neque laborum veniam corporis aliquam, repellendus atque animi hic dolor maxime quas expedita ipsam totam dolore. Cupiditate aut rerum, optio assumenda ipsam vel ipsa sit excepturi, ex hic, quasi facilis magnam nostrum repudiandae qui labore quod a et illum eum sequi animi asperiores voluptate. Hic numquam amet, aliquam quos dolor, vero sapiente nesciunt voluptatem optio illum itaque deserunt minus eligendi eveniet, perspiciatis sed consectetur ad non dignissimos! Sit mollitia sed quibusdam inventore eligendi laboriosam excepturi quae error consequuntur, quidem veniam iusto sapiente sunt accusamus, asperiores iste? Ab eum, provident, eaque possimus maxime cupiditate voluptatum! Nesciunt aliquid libero voluptate voluptas at, soluta quidem corporis eius modi eos facilis velit earum odit saepe doloribus dolores? Consectetur, pariatur, dolorum. Nihil, ipsam, quod. Dicta porro et pariatur unde adipisci quidem natus, quos, a amet laboriosam quis quas atque provident fuga, cupiditate placeat ipsam rerum. Reprehenderit totam ex quo nobis, consequatur velit veniam voluptas, ipsam eligendi voluptatem culpa omnis quae est ab cupiditate! Velit obcaecati inventore dolore consequatur vitae saepe totam ad ratione!</p>
+      <p><span class = "outspan"><span class = "inspan">STUDY</span>space</span> is a procrastination prevention and productivity promotion tool which allows students to study distraction free.
+      It's enough that - for those who do not enjoy studying - students have to fight against the urge to ditch their obligations, but once they actually put their mind to studying, they encounter more distractions compared to the external world.
+    In the end, even the most focused students can fall victim to these distractions, and by the time they realise they have gone off task, several minutes of potential progress have already been wasted. What STUDYspace does is allow students to identify
+  their biggest and most troublesome distractions and temporarily put an end to them. This is done either through a timer or of the user's own volition. <br> <br>
+STUDYspace is brought to you by the same team who created <a href="https://lfoxc.github.io/2.4-AS91893-Assessment/" target = "_blank"><span class = "outspan"><span class = "inspan">DITCS</span></span></a>, a Digital Technologies help site created for Digital Technology students in NCEA. STUDYspace inc. is a New Zealand-based
+organization which looks to help students with their studies. In the case of DITCS, it was helping to educate Digital Technology students. With STUDYspace, we want to encourage productive learning and allow you to perform to the best of your ability. In the future
+we look to further strengthen your potential through our NCEA calculator, which allows you to upload your work, mark it against the assessment criteria to determine your current grade and provides feedback and keywords to strengthen your work. STUDYspace was first founded
+as a result of the organization's head, Leijh Beale, suddenly suffering from frequent struggles to remain on task. It was here she first envisioned STUDYspace's 'Manual mode', which allowed her to block and unblock websites whenever she wanted. After noticing how often other
+students around her would go off-task, she decided STUDYspace should be made to cater to the needs of all students.</p>
     </section>
 
     <footer>
@@ -45,7 +53,7 @@
         <div class = "left box">
           <h3>About us</h3>
           <div class = "content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+            <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
             <div class = "social">
               <a href=""><span class="fab fa-brands fa-facebook"></span></a>
               <a href=""><span class="fab fa-brands fa-twitter"></span></a>
