--- a/STUDYspace website/blog1.html
+++ b/STUDYspace website/blog1.html
@@ -38,7 +38,14 @@
 
   <section class = "textblock">
     <h2><span class = "outspan">18 May 2022 </span>- Welcome to our blog!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>Welcome to our first blog post! As a part of the developmental stage of STUDYspace, we feel it is important to share our progress with all of you. This blog is
+    our way of doing so. We will submit a new blog post whenever we have something to showcase, or if any changes are made to STUDYspace itself. <br> <br>
+    It is here where we make our first big announcement: STUDYspace will not only be available as a Google Chrome Browser Extension, but as an app too! This is so that STUDYspace
+  will be more flexible in terms of use. This means STUDYspace can be used on different devices (because browser extensions can only be used on computers, desktops, etc), it will
+be able to block apps in addition to websites, and it will make use of accounts. On our Google Chrome Extension, we only intend for it to block urls and for storage to be kept on one device. This means
+If the user accesses our browser extension on a different device, it will not show the websites you have previously selected or your chosen times. It also means if users use applications on their computers,
+they may be prone to distractions. Our app will also make use of other features that will make your time with STUDYspace more productive and beneficial towards your learning. However, we only plan to release
+STUDYspace as an app after releasing the browser extension and getting some feedback from that.</p>
   </section>
 
 
@@ -48,7 +55,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
