--- a/STUDYspace website/blog2.html
+++ b/STUDYspace website/blog2.html
@@ -37,20 +37,28 @@
 
   <section class = "textblock">
     <h2><span class = "outspan">11 July 2022 </span>- STUDYspace Browser Extension first look!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>Today we are delighted to share with you a sneak peek of the STUDYspace Browser Extension! Since we are still testing our extension, we obviously could not upload our extension to the web store. We are testing the STUDYspace Chrome Extension through the Chrome Extension's Developer mode. The image below is a screenshot of the landing/pop-up page for our extension.
+    On this page, the user is presented with our two options: Manual & Pomodoro. Depending on their choice they will be transported to 1 of 2 pages.</p>
     <div class = "image">
       <img src="images/google.jpg" alt="">
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>The site selection page is one the user will visit regardless of what mode they chose and is the page where the user will be able to choose what websites they want the browser extension to block. If the user has chosen the 'Manual' option, this will be the only step they will need to do in order to enable the extension to work. If the user chooses the 'Pomodoro' option, this will be the second of two steps.
+    From here, all you have to do is decide when you want to unblock it, which can be done by clicking the puzzle icon next to the search bar.</p>
     <div class = "image">
       <img src="images/google2.jpg" alt="Page selection on STUDYspace's browser extension.">
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>The timer selection page is only visited by the user if they click on the 'Pomodoro' button. This page allows the user to choose the time they want their chosen websites to be blocked for, and when they are done they will progress to the site selection page. The maximum time you can choose is 45 minutes while the minimum is 5 minutes.</p>
     <div class = "image">
       <img src="images/google3.jpg" alt="The study session timer selection for Pomodoro mode">
     </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa sunt voluptate explicabo pariatur rem nemo, molestias ut eum ab adipisci commodi ad autem quae consectetur numquam, tempora laudantium odio similique.30</p>
+    <p>If you want to attempt to make your version of a website blocker browser extension, here are 2 useful video tutorials we found! The first video is a quick and simple tutorial, whereas the second video is longer and more complex.</p>
+    <div class = "video">
+      <ul>
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/dIrXIJ781DQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/Ee-jSoUwl2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+      </ul>
+    </div>
 
   </section>
 
@@ -62,7 +70,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
