--- a/STUDYspace website/blog3.html
+++ b/STUDYspace website/blog3.html
@@ -37,7 +37,21 @@
 
   <section class = "textblock">
     <h2><span class = "outspan">31 August 2022 </span>- Mascot + Logo Competition</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ea nisi at aliquam maxime expedita veritatis ullam facere illo ex dolorem incidunt dignissimos animi doloremque aliquid, fugit dolores doloribus quaerat deleniti ipsam sequi cupiditate aperiam, temporibus non. Perspiciatis officiis quidem, quisquam laboriosam nulla vitae veritatis dolorum quos distinctio saepe! Sed consequatur tempora, ipsa repellendus fuga. Non consectetur velit sit ad at enim accusantium perspiciatis id numquam labore adipisci veniam omnis cum aliquid, ratione, dolore aut? Officia illo ea, ipsa dolore fugit minima provident eaque vel dolor iusto rem odit voluptate obcaecati, quibusdam laborum architecto quidem deleniti quam quia aut nesciunt. At iusto ab facere quibusdam omnis sunt cum reiciendis, cupiditate consequatur dignissimos sequi harum, adipisci ratione laborum accusantium ullam repudiandae, nihil rem debitis. Recusandae aut accusantium iusto porro molestiae rerum praesentium error, quo, inventore laborum officia nisi magnam neque! Corrupti eum, quos pariatur perspiciatis maxime sed error? Voluptate labore doloremque officiis, at cum numquam deserunt, dolore ea eaque. Id voluptatem deleniti inventore provident quidem nulla eius voluptatibus possimus vitae enim, omnis suscipit commodi eos ut. Ad aperiam, voluptatum eius aliquam vitae amet recusandae reprehenderit! Error ullam est minus magni eaque fugiat, velit molestias, doloremque nihil! Nisi, amet nesciunt et alias!</p>
+    <p>In case you haven't noticed, STUDYspace does not have an official logo! The most we have is the capitalised 'study' and lower case 'space'. As nice of a branding as it is, it is a little bit plain.
+    Also, STUDYspace itself, and the way it is presented is also plain. We feel like there is no character to it. Sometimes it is good to use a mascot or ambassador to guide the user through STUDYspace's systems and features. <br> <br>
+
+    This is why we are announcing a logo and mascot competition! Here is what you need to know:</p>
+    <ol>
+      <li>The competition will last until 1st October.</li>
+      <li>Give your mascot a name and a description!</li>
+      <li>Your logo should be detailed yet simple and should accurately represent STUDYspace</li>
+      <li>Your mascot and/or logo must make use of STUDYspace's colors (Hexcode: #FF6347).</li>
+      <li>If you are designing both a logo and a mascot you can have your mascot be a part of your logo!</li>
+      <li>Granted that STUDYspace is a student oriented program, your mascot or logo must not include nudity, violence or discrimination. Any logos or mascots that do this will immediately be disqualified.</li>
+    </ol>
+
+    <p>Once you have completed your logos and/or mascots, please submit them <a href="#"><span class = "outspan"><span class = "inspan">here</span></span><a/> along with your name & email address. We will show all appropriate entries on our Instagram and Twitter page, and will leave it up to all of you to vote for your favorite design.
+    Winners will be notified before the final results are released and will be given a demo version of STUDYspace's Google Chrome Browser Extension.</p>
   </section>
 
 
@@ -46,7 +60,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
