--- a/STUDYspace website/blog4.html
+++ b/STUDYspace website/blog4.html
@@ -37,11 +37,16 @@
 
   <section class = "textblock">
     <h2><span class = "outspan">15 August 2022 </span>- New mode announcement!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>Hello STUDYBUDDIES! We thought that would be cute for some reason. As you have probably seen by the title of this blog, we have a new study mode! The name of our new study mode is... Exam mode!</p>
     <div class = "image">
       <img src="images/exam.jpg" alt="" id = "newmode">
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>Looking at the screenshot above, you might have noticed that Exam mode is a timed mode, similar to Pomodoro mode. However, Exam mode functions completely different compared to our other current modes.
+    Exam mode is meant to simulate real exam conditions. This includes the length of exams and access to resources during exams. One of the best ways to practice for an exam is to behave or work like you
+  are in an actual exam. To people who get distracted easily this may be difficult as there is nothing stopping you from accessing your notes which you might not be able to view during an exam, or any other website.
+Most exams last for several hours, with some having a minimum time in which people must remain in the exam room. If you are rehearsing for an exam of that length, then it might be especially easy to get distracted and lose
+your workflow. Exam mode allows you to choose a time between 45 minutes and 3 hours (180 minutes), and all websites
+except google applications will be blocked.</p>
   </section>
 
 
@@ -52,7 +57,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
