--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -43,7 +43,7 @@
       <div class = "newsbox">
         <a href="blog3.html"><span class = "inspan">31/08/2022:</span></a>
         <h4>Logo + Mascot competition!</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+        <p>In case you haven't noticed, STUDYspace does not have an official logo! The most we have is the capitalised 'study' and lower case 'space'.</p>
       </div>
 
       <div class = "newsbox">
@@ -55,19 +55,19 @@
       <div class = "newsbox">
         <a href="blog4.html"><span class = "inspan">15/08/2022:</span></a>
         <h4>New Mode announcement!</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+        <p>Hello STUDYBUDDIES! We thought that would be cute for some reason. As you have probably seen by the title of this blog, we have a new study mode!</p>
       </div>
 
       <div class = "newsbox">
         <a href="blog2.html"><span class = "inspan">11/07/2022:</span></a>
         <h4>STUDYspace Browser Extension first look.</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+        <p>Today we are delighted to share with you a sneak peek of the STUDYspace Browser Extension! Since we are still testing our extension...</p>
       </div>
 
       <div class = "newsbox">
         <a href="blog1.html"><span class = "inspan">18/05/2022:</span></a>
         <h4>Welcome to our blog!</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+        <p>Welcome to our first blog post! As a part of the developmental stage of STUDYspace, we feel it is important to share our progress with all of you...</p>
       </div>
     </div>
   </section>
@@ -77,7 +77,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
