--- a/STUDYspace website/blog5.html
+++ b/STUDYspace website/blog5.html
@@ -37,16 +37,17 @@
 
   <section class = "textblock">
     <h2><span class = "outspan">19 August 2022 </span>- Changes to Pomodoro mode!</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>We have a brand new update regarding STUDYspace's Pomodoro mode. Originally, Pomodoro mode did not show much of a connection to its namesake technique. It was simply the fact that you timed yourself that we decided to call it 'Pomodoro mode', but it did not make use of the technique itself.
+    The idea for Pomodoro mode was that you could choose a time of up to 45 minutes, and then choose websites for STUDYspace to block until the timer reached 0. In the original Pomodoro technique, the time you must set for yourself is 25 minutes with short break intervals in between. For the timed sessions, it is always 25 minutes.</p>
     <div class = "image">
       <img src="images/studyses.jpg" alt="" id = "studychoice">
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
+    <p>Here at STUDYspace, while we still want to follow the steps of the Pomodoro technique we still want users to be able to choose a time that they wish for their chosen websites to be blocked. We have changed the idea of Pomodoro mode so that users can choose a time between 5-25 minutes along with the length of their rest breaks being between 5-15 minutes. This is to follow in line with the original Pomodoro technique making use of several 5 minute intervals
+      and one long 15 minute interval after 3-4 studdy sessions. After the user has chosen the times, they will move onto choosing the websites they want to be blocked for their chosen time.</p>
     <div class = "image">
       <img src="images/break.jpg" alt="Page selection on STUDYspace's browser extension." id = "breakchoice">
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
-
+    <p>For now we do not have anything to stop the user from using the traditional Pomodoro technique, but in the future we might add an option within Pomodoro mode to follow the traditional Pomodoro technique.</p>
   </section>
 
 
@@ -57,7 +58,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
