--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -49,13 +49,13 @@
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading the extension.</span></h4>
         <img src="images/extensionstep1.jpg" alt="Download our extension by clicking the 'Browser Extension' option.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>In order to download our Google Chrome Extension, there will be a link that will transport you to our official page in Google Chrome's web store. Once the page has loaded, click the 'Add to Chrome' button.</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Setting up the extension.</span></h4>
         <img src="images/browser.jpg" alt="Enable the extension on Google Chrome Extensions.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>Once you have added our extension to your Chrome page, it should show up when you click on the puzzle icon besides the search bar. The extension will display your available options for studying. Go to the 'Choosing your work mode' section to find out what to do next.</p>
       </div>
     </div>
   </section>
@@ -66,25 +66,25 @@
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading our app.</span></h4>
         <img src="images/googleplay.jpg" alt="Download our extension by clicking the 'App' option.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>Once our app is ready for use, there will be a link at the top of the page to redirect you to Play Store. Or you can search it up on Play Store. Once you find our page just click on 'Install'.</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Choosing an account or guest.</span></h4>
         <img src="images/studyspaceapp.jpg" alt="Open the app and choose either 'account' or 'guest'.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>Open the app once it is installed, and choose how you would like to use STUDYspace. Either as a Guest or through an account. If you use a guest account your progress will not be saved if you delete the app, whereas if you use an account it will. If you already have an account you will be able to log in.</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three I:</span> Setting up your STUDYspace account.</span></h4>
         <img src="images/studyspaceemail.jpg" alt="Check your email address for a code if you chose the account option.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>If you choose the 'Account' option, you will be required to tell us your email address so that we can send you a registration code. You will receive an email containing the code, which you can then copy and paste into our app. The code we send you is case sensitive, so make sure to type in the same code as the email.</p>
       </div>
 
       <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three II:</span> Continuing your STUDYspace setup as a guest.</span></h4>
         <img src="images/guest.jpg" alt="Proceed onwards to choosing the mode you want to use!">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
+        <p>If you choose the 'Guest' option, instead of needing to register with your email address, you will be taken to the dashboard with the opportunity to follow a tutorial for how to use STUDYspace. Your save files will not be saved if you delete and reinstall our app, or if you install it on another device.</p>
       </div>
     </div>
   </section>
@@ -96,19 +96,19 @@
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Manual mode</span></span></h4>
           <img src="images/page.jpg" alt="Manually enable and disable website block.">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
+          <p>In Manual mode, you will have the option to choose any website or app for us to block. Unlike our timed modes, you can deactivate and reactivate the block whenever you want.</p>
       </div>
 
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Pomodoro mode</span></span></h4>
           <img src="images/studyses.jpg" alt="Choose a time of up to 25 minutes and block the websites of your choice!">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
+          <p>In Pomodoro mode, you can choose a time of up to 25 minutes and a rest break time of up to 15 minutes. Once you have chosen your times you will then move on to chosing the websites you want us to block.</p>
       </div>
 
       <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Exam mode</span></span></h4>
           <img src="images/exam.jpg" alt="Choose a time of up to 3 hours to block all urls.">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
+          <p>Compared to the other modes of STUDYspace, Exam mode does not allow you to choose what websites or apps you want blocked. Instead, it will block everything but google urls and apps. You can also choose a time between 45 minutes and 3 hours. </p>
       </div>
     </div>
   </section>
@@ -119,7 +119,7 @@
       <div class = "left box">
         <h3>About us</h3>
         <div class = "content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa voluptates quaerat quis nobis reprehenderit corrupti magnam dolorem sapiente aut!</p>
+          <p>STUDYspace inc. is a New Zealand-based organization which looks to help students with their studies. Our previous project, DITCS, is a Digital Technologies help site created for Digital Technology students in NCEA.</p>
           <div class = "social">
             <a href=""><span class="fab fa-brands fa-facebook"></span></a>
             <a href=""><span class="fab fa-brands fa-twitter"></span></a>
