Fixed one of my anchor tags as it was not closed properly.

--- a/STUDYspace website/blog3.html
+++ b/STUDYspace website/blog3.html
@@ -50,7 +50,7 @@
       <li>Granted that STUDYspace is a student oriented program, your mascot or logo must not include nudity, violence or discrimination. Any logos or mascots that do this will immediately be disqualified.</li>
     </ol>
 
-    <p>Once you have completed your logos and/or mascots, please submit them <a href="#"><span class = "outspan"><span class = "inspan">here</span></span><a/> along with your name & email address. We will show all appropriate entries on our Instagram and Twitter page, and will leave it up to all of you to vote for your favorite design.
+    <p>Once you have completed your logos and/or mascots, please submit them <a href="#"><span class = "outspan"><span class = "inspan">here</span></span></a> along with your name & email address. We will show all appropriate entries on our Instagram and Twitter page, and will leave it up to all of you to vote for your favorite design.
     Winners will be notified before the final results are released and will be given a demo version of STUDYspace's Google Chrome Browser Extension.</p>
   </section>
 
