--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -52,7 +52,7 @@ for STUDYspace once it is released!</p>
   <section class = "textblock">
     <div class = "webcheck">
       <input type="checkbox" id = "check">
-      <label for = "check">Youtube</label>
+      <label for = "check" id = "media">Youtube</label>
     </div>
     <h3>Manual mode</h3>
     <p>The main purpose of using STUDYspace is to allow students to identify their
@@ -147,5 +147,6 @@ Once the block is activated, users can choose when they want it to be disabled.<
     </div>
   </footer>
 
+  <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
